--- a/src/styles/coupons.css
+++ b/src/styles/coupons.css
@@ -12,7 +12,7 @@
   right: 0px;
   top: 0px;
   color: #fff;
-  background-color: #5FBA80;
+  background-color: #5fba80;
   padding-left: 20px;
   padding-right: 20px;
   margin-left: 30px;
@@ -25,6 +25,38 @@
 
 .btnAddCoupon:hover {
   background-color: #429a63;
+}
+
+.myBtn {
+  display: block;
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  color: #fff;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: 30px;
+  height: 45px;
+  line-height: 28px;
+  border: none;
+  border-radius: 4px;
+  font-size: 15px;
+}
+
+.myBtnAddCoupon {
+  background-color: #5fba80;
+}
+
+.myBtnAddCoupon:hover {
+  background-color: #429a63;
+}
+
+.myBtnDeleteCoupon {
+  background-color: #ba5f5f;
+}
+
+.myBtnDeleteCoupon:hover {
+  background-color: #9a4242;
 }
 
 .inputFilterCoupon {
@@ -126,4 +158,4 @@
   -webkit-box-shadow: 0 0 0 1px rgba(43, 45, 80, 0.05), 0 2px 5px 0 rgba(43, 45, 80, 0.08), 0 1px 1.5px 0 rgba(0, 0, 0, 0.07), 0 1px 2px 0 rgba(0, 0, 0, 0.08) !important;
           box-shadow: 0 0 0 1px rgba(43, 45, 80, 0.05), 0 2px 5px 0 rgba(43, 45, 80, 0.08), 0 1px 1.5px 0 rgba(0, 0, 0, 0.07), 0 1px 2px 0 rgba(0, 0, 0, 0.08) !important;
 }
-/*# sourceMappingURL=Coupons.css.map */
+/*# sourceMappingURL=coupons.css.map */
