--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,69 +1,69 @@
-$blackgrey : #333;
+$blackgrey: #333;
 
-#header{
-    background-color: $blackgrey;
-    width: 100%;
-    height: 56px;
+#header {
+  background-color: $blackgrey;
+  width: 100%;
+  height: 56px;
 }
 
-nav{
-    display: flex;
-    flex-direction: row;
-    align-content: center;
-    .menuLink {
-        height: 41px;
-        text-align: center;
-        padding-right: 40px;
-        padding-top: 15px;
-        a{
-            color: grey;
-            text-decoration: none;
-            &:hover{
-                text-decoration: none;
-                color: white;
-            }
-            &.selected{
-                text-decoration: none;
-                color: white;
-            }
-        }
-        &.logo{
-            background-image: url('img/logoWithWolfWhite.svg');
-            background-repeat: no-repeat;
-            background-position: center;
-            background-size: auto;
-            height: 56px;
-            width: 130px;
-            padding-right: 150px;
-            padding-top: 0px;
-        }
-        
-        
+nav {
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  .menuLink {
+    height: 41px;
+    text-align: center;
+    padding-right: 40px;
+    padding-top: 15px;
+    a {
+      color: grey;
+      text-decoration: none;
+      &:hover {
+        text-decoration: none;
+        color: white;
+      }
+      &.active {
+        text-decoration: none;
+        color: white;
+      }
     }
+    &.logo {
+      background-image: url('img/logoWithWolfWhite.svg');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: auto;
+      height: 56px;
+      width: 130px;
+      padding-right: 150px;
+      padding-top: 0px;
+    }
+  }
 }
 
 .dropdown {
-    position: relative;
-    display: inline-block;
-    height: auto;
-    &-content {
-        display: none;
-        position: absolute;
-        background-color: #f1f1f1;
-        min-width: 160px;
-        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-        z-index: 1;
-        a {
-            color: black;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-            &:hover {background-color: #ddd;}
-        }
-    }
-    &:hover{
-        .dropdown-content {display: block;}
+  position: relative;
+  display: inline-block;
+  height: auto;
+  &-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    a {
+      color: black;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+      &:hover {
+        background-color: #ddd;
+      }
     }
   }
-
-
+  &:hover {
+    .dropdown-content {
+      display: block;
+    }
+  }
+}
